Added recurring tasks table. Added more settings to recurring tasks

--- a/src/app/components/task-row/task-row.component.html
+++ b/src/app/components/task-row/task-row.component.html
@@ -10,6 +10,9 @@
 
   </div>
 
+  <fa-icon *ngIf="task.scheduledAt.getTime() < today.getTime() && task.scheduledAt.getDate() !== today.getDate()"
+           [icon]="late" class="me-2 text-warning"></fa-icon>
+
   {{task.title}}
 
 </div>
