--- a/src/app/components/recurring-task-table/recurring-task-table.component.html
+++ b/src/app/components/recurring-task-table/recurring-task-table.component.html
@@ -7,6 +7,8 @@
 
     <th>Mode</th>
 
+    <th>Frequency</th>
+
     <th nzWidth="15%">Actions</th>
 
   </tr>
@@ -19,6 +21,8 @@
     <td>{{recurringTask.title}}</td>
 
     <td>{{recurringTask.mode}}</td>
+
+    <td>Every {{recurringTask | frequencyToString}} </td>
 
     <td>
 
