--- a/src/app/pages/recurring-tasks-page/recurring-tasks-page.component.html
+++ b/src/app/pages/recurring-tasks-page/recurring-tasks-page.component.html
@@ -5,4 +5,10 @@
 
 </div>
 
+<div style="position: absolute; right: 24px; bottom: 88px">
+
+  <app-anchor-button-menu></app-anchor-button-menu>
+
+</div>
+
 <app-create-edit-recurring-task [openDrawer]="openDrawer.asObservable()"></app-create-edit-recurring-task>
